# leveling-education-framework

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.caddy.yml  docker-compose.yml  robots.txt
.github/: dependabot.yml
.github/workflows/: deploy-to-docker-hub.yml  test-with-cargo.yml
app/: .env.example  .gitignore  Dockerfile  eslint.config.mjs  middleware.ts  next.config.js  package-lock.json  package.json
app/components/: BeroepsLevel.tsx  BeroepsProductBadge.tsx  Contributor.tsx  DrawerContent.tsx  DrawerContentLink.tsx  InfoDrawerButton.tsx  LanguageSelector.tsx  Layout.tsx  Level.tsx  LevelsCard.tsx  LevelsCardBeroepsproduct.tsx  LevelsCardBeroepstaak.tsx  ListItemLink.tsx  Logo.tsx  Navbar.tsx  NavigationCard.tsx  NavigationCardButton.tsx  NavigationCardButtonSkill.tsx  NavigationCardSkill.tsx  ToolbarTitle.tsx
app/context/: SelectedThemeContext.ts
app/data/: STUDIEWIJZER_FOR_AI.md  examples.json  hboi-nl.json  sitemap.xml  vaardigheden-en.json  vaardigheden-nl.json
app/hooks/: useLocalStorage.ts  useTranslation.ts
app/lang/: en.json  nl.json
app/pages/: 404.tsx  _app.tsx  _document.tsx  about.tsx  beroepsproducten.tsx  beroepstaken.tsx  first-time-signup.tsx  index.tsx  login.tsx
app/prisma/: schema.prisma
app/providers/: SelectedThemeProvider.tsx
app/public/: manifest.json  service-worker.js  sw.js.map
app/themes/: dark-theme.ts  light-theme.ts
app/types/: Activiteit.ts  Architectuurlaag.ts  BeroepsProduct.ts  BeroepstakenOrVaardigheden.ts  Guild.ts  HBOI.ts  Niveau.ts  (+4 more)
src/: data.rs  domain.rs  main.rs
(+243 files in other folders)
